# ActionWeaver

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  test.md  two_sum.py
actionweaver/: __init__.py  action.py  cache.py  mixin.py  utils.py
actionweaver/actions/: __init__.py  action.py  orchestration.py  orchestration_expr.py
actionweaver/actions/factories/: __init__.py  combine.py  function.py  langchain.py  pydantic_model_to_action.py  repeat.py
actionweaver/llms/: __init__.py  exception_handler.py  loop_action.py  patch.py  wrapper.py
actionweaver/llms/azure/: chat.py  chat_loop.py  functions.py  tokens.py
actionweaver/llms/general/: action_processor.py  tools.py
actionweaver/llms/openai/: chat.py  functions.py  tokens.py
actionweaver/mixins/: __init__.py  action_handler_mixin.py
actionweaver/mixins/examples/: __init__.py  folium.py  langchain.py  openai.py
actionweaver/telemetry/: __init__.py  helpers.py
actionweaver/utils/: __init__.py  action_scope.py  output.py  pydantic_utils.py  stream.py  tokens.py
docs/: conf.py  index.rst  mkdocs.yml  requirements.in  requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
notebooks/: time.txt  tutorial.ipynb
notebooks/.ipynb_checkpoints/: test_calculator-checkpoint.py  unusual-checkpoint.txt
tests/: test_action.py  test_utils.py
tests/actions/: test_action.py  test_orchestration.py  test_orchestration_expr.py
tests/mixins/: test_action_handler.py
tests/notebooks/: run.py
tests/telemetry/: test_helpers.py
tests/utils/: test_pydantic_utils.py  test_stream.py
(+57 files in other folders)
