[tool.poetry]
name = "actionweaver"
version = "0.0.5"
description = "An Application Framework for Building LLM Agents"
authors = ['Teng "Niel" Hu <hu.niel92@gmail.com>']
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "2.2.1"
openai = "0.27.8"
pyvis = "^0.3.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
